--- a/public/css/pivot.css
+++ b/public/css/pivot.css
@@ -36,8 +36,9 @@ html.win-hoverable .win-pivot button.win-pivot-header:hover {
 }
 .win-pivot-item .win-pivot-item-content {
     padding:0px;
+    /* width: calc(100% - 28px); */
+    width: 100%;
 }
-
 #pivotScenario3 {
 }
 
@@ -105,8 +106,9 @@ html.win-hoverable .win-pivot button.win-pivot-header:hover {
     font-weight: 100;
 }
 
+font[color="#6f6f6f"],
 .mailItem .author {
-    font-weight: 500;
+    /* font-weight: 500; */
     padding-top:0px;
     white-space: nowrap;
     overflow: hidden;
@@ -126,7 +128,7 @@ html.win-hoverable .win-pivot button.win-pivot-header:hover {
     -webkit-flex: 1 100%;
     flex: 1 100%;
     /* color:#ccff00;*/
-    font-size: 14pt;
+    font-size: 16pt;
 }
 
 .mailItem .previewText {
@@ -149,20 +151,25 @@ html.win-hoverable .win-pivot button.win-pivot-header:hover {
     flex: 1 auto;
     text-align: right
 }
-.more  br {
-    
+/* MORE */
+font[color="#6f6f6f"] {
+    margin-right:10px !important;
+}
+font[size="-1"] {
+    font-size: 14pt;
+}
+div[style="padding-top: 0.8em;"] {
+    display: none;
 }
 .more * {
+    line-height:30px;
     padding:0px !important;
     margin:0px !important;
     font-weight:100 !important;
     font-family: "Segoe", "sans-serif", "Segoe UI Symbol", "Symbols" !important;
 }
-.more  a {
+.more a {
     margin-right:5px !important;
-    font-size:10pt;
-    font-weight:200 !important;
-}
-
-.more  img {
+    font-size:14pt;
+    cursor:pointer;
 }
